reasoning_transformations/CRUXEval/Transformations/logs/sample_205.log
STARTING AT 2024-10-19 22:04:52.167718
[START] processing file: sample_205
*Running tests for: sample_205
 
Result: ['tests_pass']
tests_pass sample_205 /home/yang/Benchmark/dataset/cruxeval/code//sample_205.py
Apply all rules on a single file.
Checking transformation add_nested_for_out
*Running tests for: sample_205
 
Result: ['tests_pass']
Checking transformation add_nested_while_out
*Running tests for: sample_205
 
Result: ['tests_pass']
Checking transformation add_nested_if
*Running tests for: sample_205
 
Result: ['tests_pass']
Checking transformation add_nested_list
*Running tests for: sample_205
 
Result: ['tests_pass']
Checking transformation transform_range_to_recursion
*Running tests for: sample_205
   File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_205", line 17
    break
    ^^^^^
SyntaxError: 'break' outside loop

output_actual, stderr_data: ('', b'  File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_205", line 17\n    break\n    ^^^^^\nSyntaxError: \'break\' outside loop\n')
Result: ['error_or_timeout']
Drop transform_range_to_recursion due to ['error_or_timeout']
Checking transformation add_datetime
*Running tests for: sample_205
 
Result: ['tests_pass']
Checking transformation add_time
*Running tests for: sample_205
 
Result: ['tests_pass']
Checking transformation create_functions
*Running tests for: sample_205
 
Result: ['tests_pass']
Checking transformation add_decorator
*Running tests for: sample_205
 
Result: ['tests_pass']
Checking transformation add_http
*Running tests for: sample_205
 
Result: ['tests_pass']
Checking transformation add_scipy
*Running tests for: sample_205
 
Result: ['tests_pass']
Checking transformation add_base64
*Running tests for: sample_205
 
Result: ['tests_pass']
Checking transformation add_dateutil
*Running tests for: sample_205
 
Result: ['tests_pass']
The file 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_205.py' has been formatted successfully.
Checking reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_205.py
*Running tests for: sample_205
 
Result: ['tests_pass']
{ 'applicable_rules': [ 'change_var_names',
                        'add_nested_for_out',
                        'add_nested_while_out',
                        'add_nested_if',
                        'add_try_except_inside_functions',
                        'add_else_to_for',
                        'add_else_to_while',
                        'add_nested_list',
                        'add_datetime',
                        'add_time',
                        'add_crypto',
                        'add_sklearn',
                        'create_functions',
                        'add_decorator',
                        'add_http',
                        'add_scipy',
                        'add_base64',
                        'add_dateutil',
                        'changing_AugAssign'],
  'diff_output': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_205.patch',
  'evaluation_tests_dir': '/home/yang/Benchmark/dataset/cruxeval/',
  'exception': None,
  'file_id': 'sample_205',
  'genetic_algorithm': None,
  'original_code': 'def f(a):\n'
                   '    for _ in range(10):\n'
                   '        for j in range(len(a)):\n'
                   "            if a[j] != '#':\n"
                   '                a = a[j:]\n'
                   '                break\n'
                   '        else:\n'
                   "            a = ''\n"
                   '            break\n'
                   "    while a[-1] == '#':\n"
                   '        a = a[:-1]\n'
                   '    return a',
  'patch_path': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_205.patch',
  'single_rule': None,
  'source_file': '/home/yang/Benchmark/dataset/cruxeval/code//sample_205.py',
  'target_file': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_205.py',
  'test_results_after': ['tests_pass'],
  'test_results_before': ['tests_pass'],
  'total_time': 6.024504,
  'transformed_code': 'from dateutil.parser import parse\n'
                      'import base64\n'
                      'from scipy.stats import ttest_ind\n'
                      'from http.client import HTTPConnection\n'
                      '\n'
                      'def my_decorator(func):\n'
                      '\n'
                      '    def dec_result(*args, **kwargs):\n'
                      '        res = func(*args, **kwargs)\n'
                      '        return res\n'
                      "    base64.b64encode(b'22805251368234338037')\n"
                      "    HTTPConnection('google.com', port=80)\n"
                      '    return dec_result\n'
                      '\n'
                      '@my_decorator\n'
                      'def newFunc_BinOp0(a, b):\n'
                      '    return a // b\n'
                      'from sklearn.utils import shuffle\n'
                      'from cryptography.fernet import Fernet\n'
                      'import time\n'
                      'import datetime\n'
                      '\n'
                      'def f(newa_1):\n'
                      '    time.sleep(0.16)\n'
                      '    shuffle([47, 43, 74])\n'
                      '    ttest_ind([56, 37, 26], [25, 97, 44])\n'
                      '    Fernet.generate_key()\n'
                      "    parse('2024-10-19 22:04:56')\n"
                      '    datetime.datetime.now()\n'
                      '    try:\n'
                      '        LoopChecker12 = [638][0]\n'
                      '        LoopChecker22 = 637\n'
                      '        ConditionChecker17 = 76\n'
                      '        ConditionChecker27 = 583\n'
                      '        for LoopIndexOut in '
                      'range(newFunc_BinOp0(LoopChecker12, LoopChecker22)):\n'
                      '            for _ in range(10):\n'
                      '                for j in range(len(newa_1)):\n'
                      '                    if ConditionChecker17 & '
                      'ConditionChecker27:\n'
                      "                        if newa_1[j] != '#':\n"
                      '                            newa_1 = newa_1[j:]\n'
                      '                            break\n'
                      '                else:\n'
                      "                    newa_1 = ''\n"
                      '                    break\n'
                      '        else:\n'
                      '            pass\n'
                      '        whileloopchecker113 = 575\n'
                      '        whileloopchecker213 = 574\n'
                      '        while whileloopchecker113 % whileloopchecker213 '
                      '== 1:\n'
                      '            whileloopchecker113 = whileloopchecker113 + '
                      '1\n'
                      "            while newa_1[-1] == '#':\n"
                      '                newa_1 = newa_1[:-1]\n'
                      '        else:\n'
                      '            pass\n'
                      '        return newa_1\n'
                      '    except:\n'
                      '        pass'}
[END] processing file: sample_205. Total Time: 6.024504
END AT 2024-10-19 22:04:58.193962
